// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders list item with custom description 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      false,
      false,
      Array [
        Object {
          "paddingRight": 24,
          "paddingVertical": 8,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 16,
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 16,
              },
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              undefined,
            ],
          ]
        }
      >
        List Item with custom description
      </Text>
      <View>
        <Text
          numberOfLines={2}
          style={
            Object {
              "color": "rgba(73, 69, 79, 1)",
              "fontSize": 14,
            }
          }
        >
          React Native Paper is a high-quality, standard-compliant Design Design library that has you covered in all major use-cases.
        </Text>
        <View>
          <View
            collapsable={false}
            style={
              Object {
                "alignSelf": undefined,
                "bottom": undefined,
                "left": undefined,
                "position": undefined,
                "right": undefined,
                "shadowColor": "#000",
                "shadowOffset": Object {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "top": undefined,
              }
            }
          >
            <View
              collapsable={false}
              style={
                Object {
                  "shadowColor": "#000",
                  "shadowOffset": Object {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  Object {
                    "backgroundColor": "rgba(232, 222, 248, 1)",
                    "borderColor": "rgba(121, 116, 126, 1)",
                    "borderRadius": 8,
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "flexDirection": "column",
                  }
                }
              >
                <View
                  accessibilityRole="button"
                  accessibilityState={
                    Object {
                      "disabled": false,
                      "selected": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "overflow": "hidden",
                      },
                      false,
                      Array [
                        Object {
                          "borderRadius": 8,
                        },
                        Object {
                          "flexGrow": 1,
                        },
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "flexGrow": 1,
                          "paddingLeft": 4,
                          "position": "relative",
                        },
                        Object {
                          "paddingLeft": 0,
                        },
                        Object {
                          "paddingRight": 0,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignSelf": "center",
                            "padding": 4,
                          },
                          Object {
                            "paddingLeft": 8,
                            "paddingRight": 0,
                          },
                          null,
                        ]
                      }
                    >
                      <Text
                        accessibilityElementsHidden={true}
                        allowFontScaling={false}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        selectable={false}
                        style={
                          Array [
                            Object {
                              "color": "rgba(103, 80, 164, 1)",
                              "fontSize": 18,
                            },
                            Array [
                              Object {
                                "lineHeight": 18,
                                "transform": Array [
                                  Object {
                                    "scaleX": 1,
                                  },
                                ],
                              },
                              Object {
                                "backgroundColor": "transparent",
                              },
                            ],
                            Object {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            Object {},
                          ]
                        }
                      >
                        󰈦
                      </Text>
                    </View>
                    <Text
                      numberOfLines={1}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "rgba(28, 27, 31, 1)",
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          Object {
                            "textAlign": "left",
                          },
                          Object {
                            "writingDirection": "ltr",
                          },
                          Array [
                            Object {
                              "marginVertical": 6,
                              "textAlignVertical": "center",
                            },
                            Object {
                              "color": "rgba(29, 25, 43, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            Object {
                              "marginLeft": 8,
                              "marginRight": 16,
                            },
                            undefined,
                          ],
                        ]
                      }
                    >
                      DOCS.pdf
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders list item with custom title and description styles 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      false,
      false,
      Array [
        Object {
          "paddingRight": 24,
          "paddingVertical": 8,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 16,
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 16,
              },
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              Object {
                "fontSize": 20,
              },
            ],
          ]
        }
      >
        First Item
      </Text>
      <Text
        numberOfLines={2}
        onTextLayout={[Function]}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 14,
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
              },
              Object {
                "color": "#f44336",
              },
            ],
          ]
        }
      >
        Item description
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders list item with left and right items 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      false,
      false,
      Array [
        Object {
          "paddingRight": 24,
          "paddingVertical": 8,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginVertical": 6,
      }
    }
  >
    <Text>
      GG
    </Text>
    <View
      style={
        Array [
          Object {
            "paddingLeft": 16,
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 16,
              },
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              undefined,
            ],
          ]
        }
      >
        First Item
      </Text>
      <Text
        numberOfLines={2}
        onTextLayout={[Function]}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 14,
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
              },
              undefined,
            ],
          ]
        }
      >
        Item description
      </Text>
    </View>
    <View
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "marginLeft": 16,
            "marginRight": 0,
          },
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          Array [
            Object {
              "color": "rgba(73, 69, 79, 1)",
              "fontSize": 24,
            },
            Array [
              Object {
                "lineHeight": 24,
                "transform": Array [
                  Object {
                    "scaleX": 1,
                  },
                ],
              },
              Object {
                "backgroundColor": "transparent",
              },
            ],
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰉋
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders list item with left item 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      false,
      false,
      Array [
        Object {
          "paddingRight": 24,
          "paddingVertical": 8,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginVertical": 6,
      }
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Object {
            "alignSelf": "center",
            "marginLeft": 16,
            "marginRight": 0,
            "marginVertical": 0,
          },
        ]
      }
    >
      <Text
        accessibilityElementsHidden={true}
        allowFontScaling={false}
        importantForAccessibility="no-hide-descendants"
        pointerEvents="none"
        selectable={false}
        style={
          Array [
            Object {
              "color": "rgba(73, 69, 79, 1)",
              "fontSize": 24,
            },
            Array [
              Object {
                "lineHeight": 24,
                "transform": Array [
                  Object {
                    "scaleX": 1,
                  },
                ],
              },
              Object {
                "backgroundColor": "transparent",
              },
            ],
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰉋
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "paddingLeft": 16,
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 16,
              },
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              undefined,
            ],
          ]
        }
      >
        First Item
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders list item with right item 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      false,
      false,
      Array [
        Object {
          "paddingRight": 24,
          "paddingVertical": 8,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 16,
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 16,
              },
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              undefined,
            ],
          ]
        }
      >
        First Item
      </Text>
    </View>
    <Text>
      GG
    </Text>
  </View>
</View>
`;

exports[`renders list item with title and description 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      false,
      false,
      Array [
        Object {
          "paddingRight": 24,
          "paddingVertical": 8,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 16,
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 16,
              },
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              undefined,
            ],
          ]
        }
      >
        First Item
      </Text>
      <Text
        numberOfLines={2}
        onTextLayout={[Function]}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 14,
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
              },
              undefined,
            ],
          ]
        }
      >
        Description for first item
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders with a description with typeof number 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      false,
      false,
      Array [
        Object {
          "paddingRight": 24,
          "paddingVertical": 8,
        },
        undefined,
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginVertical": 6,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 16,
          },
          Object {
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        numberOfLines={1}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 16,
              },
              Object {
                "color": "rgba(28, 27, 31, 1)",
              },
              Object {
                "fontSize": 20,
              },
            ],
          ]
        }
      >
        First Item
      </Text>
      <Text
        numberOfLines={2}
        onTextLayout={[Function]}
        selectable={false}
        style={
          Array [
            Object {
              "textAlign": "left",
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontFamily": "System",
              "fontWeight": "400",
              "letterSpacing": 0,
            },
            Object {
              "writingDirection": "ltr",
            },
            Array [
              Object {
                "fontSize": 14,
              },
              Object {
                "color": "rgba(73, 69, 79, 1)",
              },
              Object {
                "color": "#f44336",
              },
            ],
          ]
        }
      >
        123
      </Text>
    </View>
  </View>
</View>
`;
